# llm-aided-chunking

./: .gitignore  cdk.json  convert_to_json_list.py  package-lock.json  package.json  pyproject.toml
lambda/ingestion/: aws_utils.py  handler.py  kb_utils.py  reason_codes.py  requirements.txt  table_tools.py
lambda/layers/shared/: models.py
lambda/llm-inference/: handler.py  prompt.py  requirements.txt
lib/: llm-chunking-stack.ts
scripts/: run_ingestion.sh  test_classification.py
test/: llm-aided-chunking.test.ts
