[project]
name = "llm-aided-chunking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amazon-textract-caller>=0.2.4",
    "aws-lambda-powertools>=3.20.0",
    "boto3>=1.40.29",
    "instructor>=1.11.3",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "rapidfuzz>=3.14.1",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "xlsxwriter>=3.2.5",
]
